--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
 # Compiled class file
 *.class
+target/
+src/test/
 
 # Log file
 *.log
@@ -21,3 +23,7 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+
+#intellij idea
+*.iml
+.idea/
